# atlas-faucet

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  instructions.md
.github/workflows/: package.yml
scripts/: package.sh  pow-parity.mjs
src/: config.rs  eth.rs  faucet.rs  index.html  lib.rs  main.rs  pow.rs  rpc.rs  server.rs  util.rs
tests/: e2e_claim.rs
